--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
+atomicwrites==1.2.1
+attrs==18.2.0
+beautifulsoup4==4.6.3
+blinker==1.4
 Click==7.0
 Flask==1.0.2
+Flask-DebugToolbar==0.10.1
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+more-itertools==4.3.0
+pathlib2==2.3.2
 pkg-resources==0.0.0
+pluggy==0.7.1
+py==1.6.0
+pytest==3.8.2
+six==1.11.0
+waitress==1.1.0
+WebOb==1.8.2
+WebTest==2.0.32
 Werkzeug==0.14.1
