--- a/sner4web/sner4web.cfg.example
+++ b/sner4web/sner4web.cfg.example
@@ -1,1 +1,4 @@
-SECRET_KEY=''
+SECRET_KEY=""
+DEBUG_TB_INTERCEPT_REDIRECTS=False
+SQLALCHEMY_TRACK_MODIFICATIONS=False
+SQLALCHEMY_DATABASE_URI="sqlite:///../db.sqlite3"
