--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Click==7.0
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
@@ -21,3 +22,4 @@ waitress==1.1.0
 WebOb==1.8.2
 WebTest==2.0.32
 Werkzeug==0.14.1
+WTForms==2.2.1
