--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+astroid==2.0.4
 atomicwrites==1.2.1
 attrs==18.2.0
 beautifulsoup4==4.6.3
@@ -7,19 +8,25 @@ Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
 more-itertools==4.3.0
 pathlib2==2.3.2
 pkg-resources==0.0.0
 pluggy==0.7.1
 py==1.6.0
+pylint==2.1.1
 pytest==3.8.2
 six==1.11.0
 SQLAlchemy==1.2.12
+typed-ast==1.1.0
 waitress==1.1.0
 WebOb==1.8.2
 WebTest==2.0.32
 Werkzeug==0.14.1
+wrapt==1.10.11
 WTForms==2.2.1
