--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,14 @@ more-itertools==4.3.0
 pathlib2==2.3.2
 pkg-resources==0.0.0
 pluggy==0.7.1
+psycopg2-binary==2.7.6.1
 py==1.6.0
 pylint==2.1.1
 pytest==3.8.2
 six==1.11.0
 SQLAlchemy==1.2.12
+sqlalchemy-json==0.2.3
+SQLAlchemy-Utils==0.33.11
 typed-ast==1.1.0
 waitress==1.1.0
 WebOb==1.8.2
