--- a/sner_web.cfg.example
+++ b/sner_web.cfg.example
@@ -1,4 +1,4 @@
 SECRET_KEY=""
 DEBUG_TB_INTERCEPT_REDIRECTS=False
 SQLALCHEMY_TRACK_MODIFICATIONS=False
-SQLALCHEMY_DATABASE_URI="sqlite:///../db.sqlite3"
+SQLALCHEMY_DATABASE_URI="postgresql:///sner"
