big dev: 	* some linting tuning 	* server command refactoring 	* server scheduler commands to perftesting queues/scheduler 	* job/assign performance tuning 	* task/list performance tuning 	* tests placement refactoring

--- a/.pylintrc
+++ b/.pylintrc
@@ -4,6 +4,10 @@ indent-string=\t
 indent-after-paren=1
 
 
+[BASIC]
+good-names=e
+
+
 [TYPECHECK]
 ignored-classes=SQLAlchemy, sqlalchemy.orm.scoping.scoped_session
 
