--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.3.0
+netaddr==0.7.19
 pathlib2==2.3.2
 pkg-resources==0.0.0
 pluggy==0.7.1
