scheduler: output storage configuration option

--- a/sner-server.cfg.example
+++ b/sner-server.cfg.example
@@ -3,3 +3,5 @@ DEBUG_TB_INTERCEPT_REDIRECTS=False
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 SQLALCHEMY_DATABASE_URI="postgresql:///sner"
 SQLALCHEMY_ECHO = False
+
+SNER_OUTPUT_DIRECTORY='var'
