server: add default config value

--- a/sner-server.cfg.example
+++ b/sner-server.cfg.example
@@ -2,3 +2,4 @@ SECRET_KEY=""
 DEBUG_TB_INTERCEPT_REDIRECTS=False
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 SQLALCHEMY_DATABASE_URI="postgresql:///sner"
+SQLALCHEMY_ECHO = False
