--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,14 @@ atomicwrites==1.2.1
 attrs==18.2.0
 beautifulsoup4==4.6.3
 blinker==1.4
+certifi==2018.11.29
+chardet==3.0.4
 Click==7.0
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+idna==2.8
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -23,11 +26,13 @@ psycopg2-binary==2.7.6.1
 py==1.6.0
 pylint==2.1.1
 pytest==3.8.2
+requests==2.21.0
 six==1.11.0
 SQLAlchemy==1.2.12
 sqlalchemy-json==0.2.3
 SQLAlchemy-Utils==0.33.11
 typed-ast==1.1.0
+urllib3==1.24.1
 waitress==1.1.0
 WebOb==1.8.2
 WebTest==2.0.32
