--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ idna==2.8
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+jsonschema==3.0.1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
@@ -25,6 +26,7 @@ pluggy==0.7.1
 psycopg2-binary==2.7.6.1
 py==1.6.0
 pylint==2.1.1
+pyrsistent==0.14.11
 pytest==3.8.2
 requests==2.21.0
 six==1.11.0
