--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ blinker==1.4
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+file-magic==0.4.0
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
@@ -28,6 +29,7 @@ py==1.6.0
 pylint==2.1.1
 pyrsistent==0.14.11
 pytest==3.8.2
+python-libnmap==0.7.0
 requests==2.21.0
 six==1.11.0
 SQLAlchemy==1.2.12
