--- a/.pylintrc
+++ b/.pylintrc
@@ -8,3 +8,7 @@ good-names=e
 
 [TYPECHECK]
 ignored-classes=SQLAlchemy, sqlalchemy.orm.scoping.scoped_session
+
+[SIMILARITIES]
+ignore-imports=yes
+min-similarity-lines=6
