--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ itsdangerous==0.24
 Jinja2==2.10
 jsonschema==3.0.1
 lazy-object-proxy==1.3.1
+lxml==4.3.3
 MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.3.0
