--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10.1
 jsonschema==3.0.1
+lark-parser==0.7.1
 lazy-object-proxy==1.3.1
 lxml==4.3.3
 MarkupSafe==1.0
