--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pyrsistent==0.14.11
 pytest==3.8.2
 python-dateutil==2.8.0
 python-libnmap==0.7.0
+PyYAML==5.1
 requests==2.21.0
 six==1.11.0
 SQLAlchemy==1.3.3
