--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ blinker==1.4
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+coverage==4.5.3
 entrypoints==0.3
 file-magic==0.4.0
 flake8==3.7.7
@@ -36,6 +37,7 @@ pyflakes==2.1.1
 pylint==2.1.1
 pyrsistent==0.14.11
 pytest==3.8.2
+pytest-flask==0.15.0
 python-dateutil==2.8.0
 python-libnmap==0.7.0
 PyYAML==5.1
