tests: selenium tests 	* initial selenium skeleton 	* selenium tests for storage ui 	* use no_ajax_pending() when firing ajax after alert confirmation; contributed by: robert.kopecky@igalileo.cz, jiri.prochazka@igalileo.cz

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,14 @@ python: 3.7
 services:
     - postgresql
 
+addons:
+    firefox: "latest-esr"
+
 install:
     - sudo apt-get update
     - make install-deps
+    - make install-extra
+    - make db-create-test
 
 script:
     - make
