--- a/requirements.txt
+++ b/requirements.txt
@@ -36,11 +36,17 @@ pyflakes==2.1.1
 pylint==2.1.1
 pyrsistent==0.14.11
 pytest==3.8.2
+pytest-base-url==1.4.1
 pytest-flask==0.15.0
+pytest-html==1.20.0
+pytest-metadata==1.8.0
+pytest-selenium==1.16.0
+pytest-variables==1.7.1
 python-dateutil==2.8.0
 python-libnmap==0.7.0
 PyYAML==5.1
 requests==2.21.0
+selenium==3.141.0
 six==1.11.0
 SQLAlchemy==1.3.3
 sqlalchemy-datatables==1.2.0
