--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ file-magic==0.4.0
 flake8==3.7.7
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
+Flask-JSGlue==0.3.1
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 idna==2.8
