agent: apikey authentication (+ minor server and general tuning)
	* config from file and command line args
	* api authentication
	* configurable backoff time (for tests)
	* return retval from get_assignment, return on error during oneshot run

server: apikey authentication
	* get user by authorization header by apikey

general:
	* shared functions to sner.lib (must not be in sner because of cyclic imports)

--- a/sner.yaml.example
+++ b/sner.yaml.example
@@ -2,3 +2,8 @@ server:
     secret: 'changeit'
     db: 'postgresql:///sner'
     var: '/var/sner'
+
+agent:
+    server: 'http://localhost:18000'
+    apikey: 'generateit'
+    queue: null
