--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
+asn1crypto==0.24.0
 astroid==2.0.4
 atomicwrites==1.2.1
 attrs==18.2.0
 beautifulsoup4==4.6.3
 blinker==1.4
 certifi==2018.11.29
+cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 coverage==4.5.3
+cryptography==2.7
 entrypoints==0.3
+fido2==0.7.0
 file-magic==0.4.0
 flake8==3.7.7
 Flask==1.0.2
@@ -33,6 +37,7 @@ pluggy==0.7.1
 psycopg2-binary==2.7.6.1
 py==1.6.0
 pycodestyle==2.5.0
+pycparser==2.19
 pyflakes==2.1.1
 pylint==2.1.1
 pyrsistent==0.14.11
@@ -49,6 +54,7 @@ PyYAML==5.1
 requests==2.21.0
 selenium==3.141.0
 six==1.11.0
+git+https://github.com/bodik/soft-webauthn.git#egg=soft_webauthn
 SQLAlchemy==1.3.3
 sqlalchemy-datatables==1.2.0
 git+https://github.com/bodik/sqlalchemy-filters@latest_cummulative#egg=sqlalchemy_filters
