server: Flask-jsglue does not work on suburi/wsgi (#157)
	* switch to local implementation
	* test/coverage
	* server config pull server.application_root from yaml

--- a/sner.yaml.example
+++ b/sner.yaml.example
@@ -1,9 +1,10 @@
-server:
-    secret: 'changeit'
-    db: 'postgresql:///sner'
-    var: '/var/sner'
-
-agent:
-    server: 'http://localhost:18000'
-    apikey: 'generateit'
-    queue: null
+#server:
+#    secret: 'changeit'
+#    application_root: '/sner'
+#    db: 'postgresql://user:password@localhost/sner'
+#    var: '/var/sner'
+#
+#agent:
+#    server: 'http://localhost:18000'
+#    apikey: 'generateit'
+#    queue: null
