parser: replace nessus-report-parser with pytenable
nessus parsing error when plugin_output is None
https://gitlab.flab.cesnet.cz/bodik/sner4/issues/205

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 coverage
+defusedxml
 fido2
 file-magic
 flake8
@@ -9,9 +10,9 @@ flask-wtf
 jsonschema
 lark-parser
 lxml
-git+https://github.com/bodik/nessus-report-parser.git@latest_cummulative#egg=nessus_report_parser
 psycopg2
 pylint
+pytenable
 pytest<4.0
 pytest-flask
 pytest-selenium
