general: use upstream version of sqlachemy-filters
https://gitlab.flab.cesnet.cz/bodik/sner4/-/issues/222

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,5 @@ pyyaml
 requests
 soft-webauthn
 sqlalchemy-datatables
-git+https://github.com/bodik/sqlalchemy-filters@latest_cummulative#egg=sqlalchemy_filters
+sqlalchemy-filters
 webtest
