storage: check and trim generate report cell contents at 65k chars
https://gitlab.flab.cesnet.cz/bodik/sner4/-/issues/236

--- a/sner.yaml.example
+++ b/sner.yaml.example
@@ -5,6 +5,7 @@
 #    var: '/var/lib/sner'
 #    session_idletime: 3600
 #    tags: ['info', 'report', 'todo', 'reviewed', 'sslhell']
+#    trim_report_cells: 65000
 #
 #agent:
 #    server: 'http://localhost:18000'
