planner: planner development
  * refactor workflows to stages
  * implement in celery
  * discover_ipv4 and six_dns_discover

--- a/extra/sner-web.service
+++ b/extra/sner-web.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Gunicorn instance to serve sner flask application
+Description=Sner web ui (gunicorn hosted flask app)
 After=network.target
 
 [Service]
