--- a/sner.yaml.example
+++ b/sner.yaml.example
@@ -13,7 +13,7 @@
 #    queue: null
 #
 #planner:
-#    # all successfully finished jobs gets imported into storage
+#    # basic: all successfully finished jobs gets imported into storage
 #    import_jobs:
 #        - 'sner_data version scan basic'
 #        - 'sner_data version scan intense'
@@ -23,37 +23,37 @@
 #        - 'sner_data script scan ldap-rootdse'
 #        - 'sweep_sweep version scan basic'
 #
-#    # all successfull jobs are requeued into next queue
+#    # basic: all successfull jobs are requeued into next queue
 #    enqueue_servicelist:
 #       - ['sner_disco ack scan top1000', 'sner_data version scan basic']
 #       - ['sner_disco ack scan top10000', 'sner_data version scan basic']
 #       - ['sner_disco ipv6 ack scan top10000', 'sner_data ipv6 version scan basic']
 #       - ['sner_sweep ack scan portA', 'sweep_sweep version scan basic']
 #
-#    # all storage services are rescanned in interval (eg. 1week, 30days, ...)
+#    # advanced: all storage services are rescanned in interval (eg. 1week, 30days, ...)
 #    rescan_services:
 #        interval: '10days'
 #        queue4: 'sner_data version scan basic'
 #        queue6: 'sner_data ipv6 version scan basic'
 #
-#    # all storage hosts are rescanned in interval (eg. 1week, 30days, ...)
+#    # advanced: all storage hosts are rescanned in interval (eg. 1week, 30days, ...)
 #    rescan_hosts:
 #        interval: '30days'
 #        queue4: 'sner_disco ack scan top10000'
 #        queue6: 'sner_disco ipv6 ack scan top10000'
 #
-#    # set of netranges are fully rescanned in interval
+#    # advanced: set of netranges are fully rescanned in interval
 #    discover_ipv4:
 #        interval: '90days'
 #        netranges: []
 #        queue: 'sner_disco ack scan top10000'
 #
-#    # ipv6 addresses can be discovered by DNS from v4 ptr to aaaa mappings
+#    # advanced: ipv6 addresses can be discovered by DNS from v4 ptr to aaaa mappings
 #    discover_ipv6_dns:
 #        interval: '90days'
 #        netranges: []
 #        queue: 'sner_disco ipv6 dns discover'
 #
-#    # all hosts/addrs discovered requeue for service discovery
+#    # advanced: all hosts/addrs discovered requeue for service discovery
 #    enqueue_hostlist:
 #        - ['sner_disco ipv6 dns discover', 'sner_disco ipv6 ack scan top10000']
