general: add syslog identifier into systemd units/services

--- a/extra/sner-agent@.service
+++ b/extra/sner-agent@.service
@@ -7,6 +7,7 @@ ExecStart=/opt/sner/venv/bin/python /opt/sner/bin/agent --debug
 WorkingDirectory=/tmp
 Type=simple
 Restart=no
+SyslogIdentifier=sner-agent
 
 [Install]
 WantedBy=multi-user.target
