--- a/extra/sner-web.service
+++ b/extra/sner-web.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Environment="SCRIPT_NAME=/sner"
-ExecStart=/opt/sner/venv/bin/gunicorn --bind "127.0.0.1:18001" "sner.server.app:create_app()"
+ExecStart=/opt/sner/venv/bin/gunicorn --bind "127.0.0.1:18001" --timeout 120 "sner.server.app:create_app()"
 WorkingDirectory=/opt/sner
 User=www-data
 Group=www-data
