planner: stats add storage data

--- a/sner.yaml.example
+++ b/sner.yaml.example
@@ -129,4 +129,4 @@
 #        - type: generic
 #          steps:
 #              - step: storage_cleanup
-#              - step: storage_stats
+#              - step: stats
