--- a/sner.yaml.example
+++ b/sner.yaml.example
@@ -28,6 +28,7 @@
 #          steps:
 #              - step: load_job
 #                queue: 'sner_disco ack scan top10000'
+#              - step: filter_tarpits
 #              - step: project_servicelist
 #              - step: enqueue
 #                queue: 'sner_data version scan basic'
